--- a/ClientAppToBuild/ClientAppToBuild.iOS/ClientAppToBuild.iOS.csproj
+++ b/ClientAppToBuild/ClientAppToBuild.iOS/ClientAppToBuild.iOS.csproj
@@ -172,13 +172,13 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets'))" />
   </Target>
-  <UsingTask AssemblyFile="$(MSBuildProjectDirectory)\..\..\CI\bin\Release\CI.dll" TaskName="CI.DemoBeforeBuildTask" />
+  <UsingTask AssemblyFile="$(MSBuildProjectDirectory)\..\..\CI\bin\Debug\CI.dll" TaskName="CI.DemoBeforeBuildTask" />
   <Target Name="BeforeBuild">
     <Message Text="Starting iOS Before Build Task" Importance="normal" />
     <DemoBeforeBuildTask LogPath="$(MSBuildProjectDirectory)\..\..\..\ClientAppToBuild.iOS.BeforeBuild.Log.txt" ProjectName="$(MSBuildProjectFile)" />
     <Message Text="Finishing iOS Before Build Task" Importance="normal" />
   </Target>
-  <UsingTask AssemblyFile="$(MSBuildProjectDirectory)\..\..\CI\bin\Release\CI.dll" TaskName="CI.DemoAfterBuildTask" />
+  <UsingTask AssemblyFile="$(MSBuildProjectDirectory)\..\..\CI\bin\Debug\CI.dll" TaskName="CI.DemoAfterBuildTask" />
   <Target Name="AfterBuild">
     <Message Text="Starting iOS After Build Task" Importance="normal" />
     <DemoAfterBuildTask LogPath="$(MSBuildProjectDirectory)\..\..\..\ClientAppToBuild.iOS.AfterBuild.Log.txt" ProjectName="$(MSBuildProjectFile)" />
