--- a/CI/CI.csproj
+++ b/CI/CI.csproj
@@ -42,8 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DemoAfterBuildTask.cs" />
-    <Compile Include="DemoBeforeBuildTask.cs" />
+    <Compile Include="IOSAfterBuildTask.cs" />
+    <Compile Include="IOSBeforeBuildTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
