--- a/ClientAppToBuild/ClientAppToBuild/ClientAppToBuild.csproj
+++ b/ClientAppToBuild/ClientAppToBuild/ClientAppToBuild.csproj
@@ -33,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="MainPage.xaml.cs">
