--- a/ClientAppToBuild/ClientAppToBuild.iOS/ClientAppToBuild.iOS.csproj
+++ b/ClientAppToBuild/ClientAppToBuild.iOS/ClientAppToBuild.iOS.csproj
@@ -185,7 +185,7 @@
     <Message Text="Finishing iOS Before Build Task" Importance="normal" />
   </Target>
   <UsingTask AssemblyFile="$(MSBuildProjectDirectory)\..\..\CI\bin\Debug\CI.dll" TaskName="CI.IOSAfterBuildTask" />
-  <Target Name="AfterCompileSolution" >
+  <Target Name="AfterEndToEndIteration" >
     <Message Text="Starting iOS After Build Task" Importance="normal" />
     <IOSAfterBuildTask 
       LogPath="$(MSBuildProjectDirectory)\..\..\..\ClientAppToBuild.iOS.AfterBuild.Log.txt" 
