--- a/CI.Postbuild.ConsoleApp/CI.Postbuild.ConsoleApp.csproj
+++ b/CI.Postbuild.ConsoleApp/CI.Postbuild.ConsoleApp.csproj
@@ -32,6 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\CI.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,10 +52,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CI\CI.csproj">
-      <Project>{e6101995-de2f-4928-a087-709eee133400}</Project>
-      <Name>CI</Name>
-    </ProjectReference>
+    <Content Include="CI.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
