--- a/CI.Postbuild.ConsoleApp/CI.Postbuild.ConsoleApp.csproj
+++ b/CI.Postbuild.ConsoleApp/CI.Postbuild.ConsoleApp.csproj
@@ -65,7 +65,7 @@
     <Message Text="Starting CI.PostBuild.ConsoleApp Before Build Task" Importance="normal" />
     <CIPostBuildConsoleAppBeforeBuild
       ProjectName="$(MSBuildProjectFile)" 
-      LogPath="$(MSBuildProjectDirectory)\..\..\..\CI.PostBuild.ConsoleApp.BeforeBuild.Log.txt"
+      LogPath="$(MSBuildProjectDirectory)\..\..\CI.PostBuild.ConsoleApp.BeforeBuild.Log.txt"
       CIDLLPath="$(MSBuildProjectDirectory)\..\CI\bin\Debug\CI.dll"
       CIDLLDestinationPath="$(MSBuildProjectDirectory)\CI.dll"
       />
