--- a/CI.Postbuild.ConsoleApp/CI.Postbuild.ConsoleApp.csproj
+++ b/CI.Postbuild.ConsoleApp/CI.Postbuild.ConsoleApp.csproj
@@ -51,9 +51,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="CI.dll" />
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
@@ -63,12 +60,7 @@
   <UsingTask AssemblyFile="$(MSBuildProjectDirectory)\..\CI\bin\Debug\CI.dll" TaskName="CI.CIPostBuildConsoleAppBeforeBuild" />
   <Target Name="BeforeBuild">
     <Message Text="Starting CI.PostBuild.ConsoleApp Before Build Task" Importance="normal" />
-    <CIPostBuildConsoleAppBeforeBuild
-      ProjectName="$(MSBuildProjectFile)" 
-      LogPath="$(MSBuildProjectDirectory)\..\..\CI.PostBuild.ConsoleApp.BeforeBuild.Log.txt"
-      CIDLLPath="$(MSBuildProjectDirectory)\..\CI\bin\Debug\CI.dll"
-      CIDLLDestinationPath="$(MSBuildProjectDirectory)\CI.dll"
-      />
+    <CIPostBuildConsoleAppBeforeBuild ProjectName="$(MSBuildProjectFile)" LogPath="$(MSBuildProjectDirectory)\..\..\CI.PostBuild.ConsoleApp.BeforeBuild.Log.txt" CIDLLPath="$(MSBuildProjectDirectory)\..\CI\bin\Debug\CI.dll" CIDLLDestinationPath="$(MSBuildProjectDirectory)\CI.dll" />
     <Message Text="Finishing CI.PostBuild.ConsoleApp Before Build Task" Importance="normal" />
   </Target>
 </Project>
