--- a/CI/packages.config
+++ b/CI/packages.config
@@ -3,11 +3,6 @@
   <package id="Dropbox.Api" version="1.1.0-beta" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
-  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45">
-    <dependentAssembly>
-      <assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-      <bindingRedirect oldVersion="0.0.0.0-1.5.0.0" newVersion="4.0.0.0" />
-    </dependentAssembly>
-  </package>
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
 </packages>
