--- a/CI.Postbuild.ConsoleApp/CI.Postbuild.ConsoleApp.csproj
+++ b/CI.Postbuild.ConsoleApp/CI.Postbuild.ConsoleApp.csproj
@@ -85,10 +85,29 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="bin\Release\CI.Postbuild.ConsoleApp.exe.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bin\Release\CI.dll" />
     <Content Include="bin\Release\CI.Postbuild.ConsoleApp.exe" />
+    <Content Include="bin\Release\CI.Postbuild.ConsoleApp.pdb" />
+    <Content Include="bin\Release\Com.Xamtastic.Patterns.CI.Dropbox.dll" />
+    <Content Include="bin\Release\Com.Xamtastic.Patterns.CI.Dropbox.pdb" />
+    <Content Include="bin\Release\Dropbox.Api.dll" />
+    <Content Include="bin\Release\Dropbox.Api.xml" />
+    <Content Include="bin\Release\Microsoft.Threading.Tasks.dll" />
+    <Content Include="bin\Release\Microsoft.Threading.Tasks.Extensions.Desktop.dll" />
+    <Content Include="bin\Release\Microsoft.Threading.Tasks.Extensions.Desktop.xml" />
+    <Content Include="bin\Release\Microsoft.Threading.Tasks.Extensions.dll" />
+    <Content Include="bin\Release\Microsoft.Threading.Tasks.Extensions.xml" />
+    <Content Include="bin\Release\Microsoft.Threading.Tasks.xml" />
+    <Content Include="bin\Release\Newtonsoft.Json.dll" />
+    <Content Include="bin\Release\Newtonsoft.Json.xml" />
+    <Content Include="bin\Release\System.Net.Http.Extensions.dll" />
+    <Content Include="bin\Release\System.Net.Http.Extensions.xml" />
+    <Content Include="bin\Release\System.Net.Http.Primitives.dll" />
+    <Content Include="bin\Release\System.Net.Http.Primitives.xml" />
     <Content Include="Com.Xamtastic.Patterns.CI.Dropbox.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
