--- a/CI/CI.csproj
+++ b/CI/CI.csproj
@@ -88,6 +88,10 @@
       <Name>Com.Xamtastic.Patterns.CI.Dropbox</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\CI.dll" />
+    <Content Include="bin\Debug\Com.Xamtastic.Patterns.CI.Dropbox.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
