--- a/CI/CI.csproj
+++ b/CI/CI.csproj
@@ -91,6 +91,13 @@
   <ItemGroup>
     <Content Include="bin\Debug\CI.dll" />
     <Content Include="bin\Debug\Com.Xamtastic.Patterns.CI.Dropbox.dll" />
+    <Content Include="bin\Debug\Dropbox.Api.dll" />
+    <Content Include="bin\Debug\Microsoft.Threading.Tasks.dll" />
+    <Content Include="bin\Debug\Microsoft.Threading.Tasks.Extensions.Desktop.dll" />
+    <Content Include="bin\Debug\Microsoft.Threading.Tasks.Extensions.dll" />
+    <Content Include="bin\Debug\Newtonsoft.Json.dll" />
+    <Content Include="bin\Debug\System.Net.Http.Extensions.dll" />
+    <Content Include="bin\Debug\System.Net.Http.Primitives.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
