--- a/CI.Postbuild.ConsoleApp/CI.Postbuild.ConsoleApp.csproj
+++ b/CI.Postbuild.ConsoleApp/CI.Postbuild.ConsoleApp.csproj
@@ -57,8 +57,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -112,6 +112,7 @@
     <Content Include="bin\Release\System.Net.Http.Primitives.xml" />
     <Content Include="CI.dll" />
     <Content Include="Com.Xamtastic.Patterns.CI.Dropbox.dll" />
+    <Content Include="Newtonsoft.Json.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
