--- a/ClientAppToBuild/ClientAppToBuild.iOS/ClientAppToBuild.iOS.csproj
+++ b/ClientAppToBuild/ClientAppToBuild.iOS/ClientAppToBuild.iOS.csproj
@@ -179,7 +179,17 @@
   <UsingTask AssemblyFile="$(MSBuildProjectDirectory)\..\..\3rdParty\PostBuild\CI.dll" TaskName="CI.IOSBeforeBuildTask" />
   <Target Name="BeforeBuild">
     <Message Text="Starting iOS Before Build Task" Importance="normal" />
-    <IOSBeforeBuildTask BuildNumberPrefix="0.0" NextBuildNumberFilePath="$(MSBuildProjectDirectory)\..\..\..\nextBuildNumber" LogPath="$(MSBuildProjectDirectory)\..\..\..\ClientAppToBuild.iOS.BeforeBuild.Log.txt" ProjectName="$(MSBuildProjectFile)" InfoPlistPath="$(MSBuildProjectDirectory)\info.plist" PostBuildConfigFileName="CIPostBuildConfig.Json" PostBuildConfigDirectory="$(MSBuildProjectDirectory)\..\..\..\CIConfig\" IPASourceFileName="JenkinsPreBuild.ipa" IPATargetFileName="JenkinsPreBuild.{0}.ipa" IPASourceDirectory="$(MSBuildProjectDirectory)\bin\iPhone\Release\" IPATargetDirectory="$(MSBuildProjectDirectory)\..\..\..\IPAArchives\" />
+    <IOSBeforeBuildTask BuildNumberPrefix="0.0" 
+                        NextBuildNumberFilePath="$(MSBuildProjectDirectory)\..\..\..\nextBuildNumber" 
+                        LogPath="$(MSBuildProjectDirectory)\..\..\..\ClientAppToBuild.iOS.BeforeBuild.Log.txt" 
+                        ProjectName="$(MSBuildProjectFile)" 
+                        InfoPlistPath="$(MSBuildProjectDirectory)\info.plist" 
+                        PostBuildConfigFileName="CIPostBuildConfig.Json" 
+                        PostBuildConfigDirectory="$(MSBuildProjectDirectory)\..\..\..\CIConfig\" 
+                        IPASourceFileName="JenkinsPreBuild.ipa" 
+                        IPASourceDirectory="$(MSBuildProjectDirectory)\bin\iPhone\Release\" 
+                        IPATargetFileName="JenkinsPreBuild.{0}.ipa" 
+                        IPATargetDirectory="$(MSBuildProjectDirectory)\..\..\..\IPAArchives\" />
     <Message Text="Finishing iOS Before Build Task" Importance="normal" />
   </Target>
   <Target Name="AfterCompile">
