--- a/Com.Xamtastic.Patterns.CI.Dropbox/Com.Xamtastic.Patterns.CI.Dropbox.csproj
+++ b/Com.Xamtastic.Patterns.CI.Dropbox/Com.Xamtastic.Patterns.CI.Dropbox.csproj
@@ -34,6 +34,9 @@
       <HintPath>..\packages\Dropbox.Api.1.1.0-beta\lib\portable-net45+sl50+win+wpa81+wp80\Dropbox.Api.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.Build.Framework" />
+    <Reference Include="Microsoft.Build.Tasks.v4.0" />
+    <Reference Include="Microsoft.Build.Utilities.v4.0" />
     <Reference Include="Microsoft.Threading.Tasks, Version=1.0.12.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.dll</HintPath>
       <Private>True</Private>
@@ -71,6 +74,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DropboxClient.cs" />
+    <Compile Include="IOSBeforeBuildTask.cs" />
+    <Compile Include="PostBuildConfigSettingsModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
