--- a/Xamtastic.Automation/App.config
+++ b/Xamtastic.Automation/App.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="AutomationLogDirectory" value="/Users/CI/.jenkins/jobs/Jenkins Automatic Deployment Template/" />
-    <add key="AutomationLogFilename" value="MyExeLogFile.txt" />
-    <add key="AutomationConfigDirectory" value="/Users/CI/.jenkins/jobs/Jenkins Automatic Deployment Template/CIConfig" />
-    <add key="AutomationConfigFilename" value="CIPostBuildConfig.json" />
+    <add key="AutomationLogDirectory" value="/Users/CI/.jenkins/jobs/Jenkins Automatic Deployment Template/CIDeployment/Logs" />
+    <add key="AutomationLogFilename" value="AutomaticDeploymentLogFile.txt" />
+    <add key="AutomationConfigDirectory" value="/Users/CI/.jenkins/jobs/Jenkins Automatic Deployment Template/CIDeployment/Config" />
+    <add key="AutomationConfigFilename" value="Config.json" />
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
