--- a/Xamtastic/Automation/Xamtastic.Automation.exe.config
+++ b/Xamtastic/Automation/Xamtastic.Automation.exe.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="AutomationLogDirectory" value="/Users/CI/.jenkins/jobs/Jenkins Automatic Deployment Template/CIDeployment/Logs" />
+    <add key="AutomationLogDirectory" value="\Users\CI\.jenkins\jobs\Jenkins Automatic Deployment Template\CIDeployment\Logs" />
     <add key="AutomationLogFilename" value="AutomaticDeploymentLogFile.txt" />
-    <add key="AutomationConfigDirectory" value="/Users/CI/.jenkins/jobs/Jenkins Automatic Deployment Template/CIDeployment/Config" />
+    <add key="AutomationConfigDirectory" value="\Users\CI\.jenkins\jobs\Jenkins Automatic Deployment Template\CIDeployment\Config" />
     <add key="AutomationConfigFilename" value="Config.json" />
   </appSettings>
     <startup> 
