--- a/ClientAppToBuild/ClientAppToBuild.iOS/ClientAppToBuild.iOS.csproj
+++ b/ClientAppToBuild/ClientAppToBuild.iOS/ClientAppToBuild.iOS.csproj
@@ -181,16 +181,16 @@
     <Message Text="Starting iOS Before Build Task" Importance="normal" />
     <IOSBeforeBuildTask BuildNumberPrefix="0.0" 
                         NextBuildNumberFilePath="$(MSBuildProjectDirectory)\..\..\..\nextBuildNumber" 
-                        LogDirectory="$(MSBuildProjectDirectory)\..\..\..\CIDeployment\Logs"
+                        LogDirectory="$(MSBuildProjectDirectory)\..\..\..\CIDeployment\Jenkins Automatic Deployment Template\Logs"
                         LogFilename="ClientAppToBuild.iOS.BeforeBuild.Log.txt"
                         ProjectName="$(MSBuildProjectFile)" 
                         InfoPlistPath="$(MSBuildProjectDirectory)\info.plist" 
                         PostBuildConfigFileName="Config.Json" 
-                        PostBuildConfigDirectory="$(MSBuildProjectDirectory)\..\..\..\CIDeployment\Config" 
+                        PostBuildConfigDirectory="$(MSBuildProjectDirectory)\..\..\..\CIDeployment\Jenkins Automatic Deployment Template\Config" 
                         IPASourceFileName="JenkinsPreBuild.ipa" 
                         IPASourceDirectory="$(MSBuildProjectDirectory)\bin\iPhone\Release\" 
                         IPATargetFileName="JenkinsPreBuild.{0}.ipa" 
-                        IPATargetDirectory="$(MSBuildProjectDirectory)\..\..\..\CIDeployment\Archives\IPA" />
+                        IPATargetDirectory="$(MSBuildProjectDirectory)\..\..\..\CIDeployment\Jenkins Automatic Deployment Template\Archives\IPA" />
     <Message Text="Finishing iOS Before Build Task" Importance="normal" />
   </Target>
   <Target Name="AfterCompile">
