--- a/ClientAppToBuild/ClientAppToBuild.iOS/ClientAppToBuild.iOS.csproj
+++ b/ClientAppToBuild/ClientAppToBuild.iOS/ClientAppToBuild.iOS.csproj
@@ -50,7 +50,7 @@
     <MtouchDebug>True</MtouchDebug>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <BuildIpa>True</BuildIpa>
-    <IpaIncludeArtwork>False</IpaIncludeArtwork>
+    <IpaIncludeArtwork>true</IpaIncludeArtwork>
     <IpaPackageName>JenkinsPreBuild.ipa</IpaPackageName>
     <MtouchSdkVersion>8.4</MtouchSdkVersion>
     <MtouchLink>Full</MtouchLink>
